<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.ems_development.congreso_pccf.fragments.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_schedule"
        android:name="com.ems_development.congreso_pccf.fragments.schedule.ScheduleFragment"
        android:label="@string/title_shedule_of_talks"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.ems_development.congreso_pccf.fragments.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/navigation_create_news"
        android:name="com.ems_development.congreso_pccf.fragments.news.CreateNewsFragment"
        tools:layout="@layout/fragment_create_news" />

    <fragment
        android:id="@+id/navigation_location"
        android:name="com.ems_development.congreso_pccf.fragments.location.LocationFragment"
        android:label="@string/title_location"
        tools:layout="@layout/fragment_location" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.ems_development.congreso_pccf.fragments.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>