<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/txt_title_create_schedule"
        android:textSize="22sp"
        app:fontFamily="@font/raleway_bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_name_schedule"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/rectangle_edit_text"
        android:ems="13"
        android:hint="@string/hint_name_schedule"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_create_schedule"
        app:layout_constraintStart_toStartOf="@+id/btn_create_schedule"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btn_date_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_date_schedule"
        android:background="@drawable/general_button_radius"
        app:layout_constraintStart_toStartOf="@+id/et_name_schedule"
        app:layout_constraintTop_toBottomOf="@+id/et_name_schedule" />

    <Button
        android:id="@+id/btn_start_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_start_schedule"
        android:background="@drawable/general_button_radius"
        app:layout_constraintStart_toStartOf="@+id/btn_date_schedule"
        app:layout_constraintTop_toBottomOf="@+id/btn_date_schedule" />

    <Button
        android:id="@+id/btn_end_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_end_schedule"
        android:background="@drawable/general_button_radius"
        app:layout_constraintStart_toStartOf="@+id/btn_start_schedule"
        app:layout_constraintTop_toBottomOf="@+id/btn_start_schedule" />

    <EditText
        android:id="@+id/et_date_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_edit_text"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint_date_schedule"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_date_schedule"
        app:layout_constraintEnd_toEndOf="@+id/et_name_schedule" />

    <EditText
        android:id="@+id/et_start_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_edit_text"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint_start_schedule"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_start_schedule"
        app:layout_constraintEnd_toEndOf="@+id/et_date_schedule" />

    <EditText
        android:id="@+id/et_end_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_edit_text"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/hint_end_schedule"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:textSize="15sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_end_schedule"
        app:layout_constraintEnd_toEndOf="@+id/et_start_schedule" />

    <Button
        android:id="@+id/btn_select_lecturers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_add_lecturers"
        android:background="@drawable/general_button_radius"
        app:layout_constraintEnd_toEndOf="@+id/et_end_schedule"
        app:layout_constraintStart_toStartOf="@+id/btn_end_schedule"
        app:layout_constraintTop_toBottomOf="@+id/btn_end_schedule" />

    <EditText
        android:id="@+id/et_selected_lecturers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_edit_text"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:enabled="false"
        android:ems="10"
        android:textSize="15sp"
        android:padding="10dp"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/btn_select_lecturers"
        app:layout_constraintStart_toStartOf="@+id/btn_select_lecturers"
        app:layout_constraintTop_toBottomOf="@+id/btn_select_lecturers" />

    <Button
        android:id="@+id/btn_create_schedule"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_continue"
        android:text="@string/btn_create_news"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_selected_lecturers" />

</androidx.constraintlayout.widget.ConstraintLayout>