<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <TextView
        android:id="@+id/txt_title_creation_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/muli_bold"
        android:text="@string/txt_title_create_news"
        android:textColor="@color/pink"
        android:textSize="32sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_title_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/txt_title_news"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_creation_news" />

    <EditText
        android:id="@+id/et_title_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_title_news"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_grey"
        android:background="@color/white"
        android:inputType="text"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_title_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_title_news" />

    <TextView
        android:id="@+id/txt_content_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/txt_content_news"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/txt_title_news"
        app:layout_constraintTop_toBottomOf="@+id/txt_title_news" />

    <EditText
        android:id="@+id/et_content_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/hint_content_news"
        android:inputType="textMultiLine"
        android:lines="3"
        android:textColor="@color/black"
        android:background="@color/white"
        android:textColorHint="@color/dark_grey"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_content_news"
        app:layout_constraintEnd_toEndOf="@+id/et_title_news" />

    <Button
        android:id="@+id/btn_create_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_continue"
        android:text="@string/btn_create_news"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_content_news" />
</androidx.constraintlayout.widget.ConstraintLayout>