<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingLeft="10dp"
            android:paddingTop="5dp"
            android:paddingRight="10dp"
            android:paddingBottom="20dp">

            <Button
                android:id="@+id/button_ok_chat"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_dialog"
                android:text="@string/ok"
                android:textColor="@color/light_black"
                android:textSize="12sp"
                app:fontFamily="@font/raleway_semibold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_cancel_chat"
                app:layout_constraintTop_toBottomOf="@+id/dialog_message" />

            <Button
                android:id="@+id/button_cancel_chat"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_dialog"
                android:text="@string/cancel"
                android:textColor="@color/light_black"
                android:textSize="12sp"
                app:fontFamily="@font/raleway_semibold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/image_news"
                app:layout_constraintTop_toBottomOf="@+id/dialog_message" />

            <ImageView
                android:id="@+id/image_news"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/app_name"
                android:scaleType="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_calendar_violet" />

            <TextView
                android:id="@+id/dialog_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:layout_marginTop="20dp"
                android:text="@string/dialog_chat_message"
                android:textColor="@color/dark_grey"
                app:fontFamily="@font/raleway"
                app:layout_constraintStart_toStartOf="@+id/image_news"
                app:layout_constraintTop_toBottomOf="@+id/dialog_title" />

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:text="@string/title_create_shedule"
                android:textColor="@color/light_black"
                android:textSize="17sp"
                app:fontFamily="@font/raleway_bold"
                app:layout_constraintBottom_toBottomOf="@+id/image_news"
                app:layout_constraintStart_toEndOf="@+id/image_news"
                app:layout_constraintTop_toTopOf="@+id/image_news" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
