<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResetPasswordActivity">

    <Button
        android:id="@+id/button_send_email"
        android:layout_width="292dp"
        android:layout_height="45dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_continue"
        android:elevation="4dp"
        android:text="@string/enviar"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:fontFamily="@font/muli"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="315dp"
        android:layout_height="47dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rectangle_email_password"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter_your_email" />

    <TextView
        android:id="@+id/change_your_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/change_password"
        android:textSize="25sp"
        app:fontFamily="@font/muli_semibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enter_your_email"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:text="@string/enter_your_email"
        app:fontFamily="@font/muli_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/ic_security_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_your_password"
        tools:srcCompat="@drawable/ic_security_lock" />
</androidx.constraintlayout.widget.ConstraintLayout>